# rust-sample

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
