[package]
name = "rust-app"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.3", features=["json"] }
tokio = { version="1.0.1", features=["full"] }
sqlx = { version="0.5.5", features=["runtime-tokio-rustls", "postgres", "chrono"] }

async-trait = "0.1.50"
futures = "0.3"

anyhow = "1.0.40"
thiserror = "1.0"

serde_json = "1.0"
serde = { version="1.0", features=["derive"] }

cron = "0.9.0"

chrono = { version="0.4", features=["serde"] }
chrono-tz = { version="0.5.3", features=["serde"] }

once_cell = "1.7.2"
itertools = "0.10.0"

structopt = "0.3.19"
env_logger = "0.8.3"
log = "0.4.5"
dotenv = "0.15.0"
